# ranger

./: .env.example  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
bot/: __main__.py  bot.py  pgsql.py
bot/cogs/: add_to_todo.py  cog_base.py  embed_message.py  forum_analysis.py  role_buttons.py
bot/configs/: .gitignore
bot/configs/applied_configs/: .gitignore
bot/configs/defaults/: global_config.json
bot/configs/schemas/: definitions.schema.json  global_config.schema.json  message.schema.json  role_buttons.schema.json
bot/configs_base/defaults/: forum_analysis.json  global_config.json
bot/dashboard/: dashboard.py  routers.py
bot/dashboard/static/js/: jsoneditor.js
bot/dashboard/templates/: config_editor.html  index.html
bot/typehints/: gql_response.py
bot/utils/: custom_types.py  helper.py
config/: regions.829265067073339403.json  regions.870246147455877181.json  regions.json
src/app/: __main__.py  bot.py  config.py  db.py  health.py
src/app/cogs/: playtest.py
src/app/cogs/playtest/: __init__.py  announcements.py  cog.py  experience.py
src/app/cogs/playtest/ui/: __init__.py  modals.py  views.py
