[tool.poetry]
name = "ranger"
version = "1.0.0"
description = ""
authors = ["p0lygun <solankivibhakar82@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "bot", from = "."},
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
py-cord = {extras = ["speed"], version = "^2.4.1"}
python-dotenv = "^1.0.0"
dictdiffer = "^0.9.0"
starlette-discord = {git = "https://github.com/p0lygun/starlette-discord.git"}
loguru = "^0.7.2"
itsdangerous = "^2.1.2"
jinja2 = "^3.1.2"
aiofiles = "^23.2.1"


[tool.poetry.scripts]
ranger = "bot.__main__:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
