[project]
name = "ranger"
version = "0.1.0"
description = "General Purpose  bot for BFPC"
authors = [
    { name = "MagneticNeedle", email = "solankivibhakar82@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "discord-py>=2.7.1",
    "aiosqlite>=0.20.0",
    "pydantic-settings>=2.5.0",
]

[project.scripts]
app = "app.__main__:start"

[build-system]
requires = ["uv_build<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "app"
module-root = "src"
